SP-T1931 fix actions alignment

--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,5 +1,6 @@
 .filters-button {
   margin-left: 10px !important;
+  vertical-align: middle !important;
 }
 
 .filters-button + fs-filter-actions:not(:empty) {
